kubernetes/nextcloud.yml
dep:
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: nextcloud
    namespace: nextdemand
    labels:
      app: nextcloud
      instanceId: default
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: nextcloud
        instanceId: default
    template:
      metadata:
        labels:
          app: nextcloud
          instanceId: default
      spec:
        volumes:
          - name: nextcloud-config
            persistentVolumeClaim:
              claimName: nextcloud-config-pvc
          - name: nextcloud-data
            emptyDir: {}
        containers:
          - name: nextcloud
            image: nextcloud
            volumeMounts:
              - name: nextcloud-config
                mountPath: /default
            lifecycle:
              postStart:
                exec:
                  command: [
                    "/bin/sh",
                    "-c", "sleep 10 && cp -r /default/* /var/www/html/core/skeleton && cp -r /default/* /var/www/html/core/skeleton/Photos && chown -R www-data:www-data /var/www/html/core/skeleton && su www-data -s /bin/bash -c 'php occ maintenance:install --admin-user $NEXTCLOUD_ADMIN_USER --admin-pass $NEXTCLOUD_ADMIN_PASSWORD &&  php occ config:system:set trusted_domains 2 --value $NEXTCLOUD_TRUSTED_DOMAINS'" ]

service:
  apiVersion: v1
  kind: Service
  metadata:
    name: nextcloud-service
    namespace: nextdemand
    labels:
      app: nextcloud
      instanceId: default
  spec:
    selector:
      app: nextcloud
      instanceId: default
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80


ingress:
  apiVersion: traefik.containo.us/v1alpha1
  kind: IngressRoute
  metadata:
    name: nextcloud-ingress
    namespace: nextdemand
    annotations:
      traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    labels:
      app: nextcloud
      instanceId: default
  spec:
    entryPoints:
      - websecure
    routes:
      - match: Host(`default.nextdemand.neoin.space`)
        kind: Rule
        services:
          - name: nextcloud-service
            port: 80
