kubernetes/webserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: nextdemand
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      serviceAccountName: webserver-serviceaccount
      containers:
        - name: webserver
          image: nextdemand:nextdemand

---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: nextdemand
  labels:
    app: webserver
spec:
    selector:
        app: webserver
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webserver-ingressroute
  namespace: nextdemand
  labels:
    app: nextdemand
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextdemand.neoin.space`)
      kind: Rule
      services:
        - name: webserver-service
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-handler-middleware
  namespace: nextdemand
spec:
    errors:
        status:
          - "404"
        query: /redirect
        service:
            name: webserver-service
            port: 80
